objects/Orders__x.object
<CustomObject>
    <description>Orders</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Orders</externalName>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>CustomerID</description>
        <externalDeveloperName>CustomerID</externalDeveloperName>
        <label>CustomerID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <description>EmployeeID</description>
        <externalDeveloperName>EmployeeID</externalDeveloperName>
        <label>EmployeeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <description>Freight</description>
        <externalDeveloperName>Freight</externalDeveloperName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <description>OrderDate</description>
        <externalDeveloperName>OrderDate</externalDeveloperName>
        <label>OrderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiredDate__c</fullName>
        <description>RequiredDate</description>
        <externalDeveloperName>RequiredDate</externalDeveloperName>
        <label>RequiredDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipAddress__c</fullName>
        <description>ShipAddress</description>
        <externalDeveloperName>ShipAddress</externalDeveloperName>
        <label>ShipAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipCity__c</fullName>
        <description>ShipCity</description>
        <externalDeveloperName>ShipCity</externalDeveloperName>
        <label>ShipCity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipCountry__c</fullName>
        <description>ShipCountry</description>
        <externalDeveloperName>ShipCountry</externalDeveloperName>
        <label>ShipCountry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipName__c</fullName>
        <description>ShipName</description>
        <externalDeveloperName>ShipName</externalDeveloperName>
        <label>ShipName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipPostalCode__c</fullName>
        <description>ShipPostalCode</description>
        <externalDeveloperName>ShipPostalCode</externalDeveloperName>
        <label>ShipPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipRegion__c</fullName>
        <description>ShipRegion</description>
        <externalDeveloperName>ShipRegion</externalDeveloperName>
        <label>ShipRegion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipVia__c</fullName>
        <description>ShipVia</description>
        <externalDeveloperName>ShipVia</externalDeveloperName>
        <label>ShipVia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <description>ShippedDate</description>
        <externalDeveloperName>ShippedDate</externalDeveloperName>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Orders</label>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>